# FORTCMB

./: .gitignore  CMakeLists.txt  README.md  vis.py
lib/: CMakeLists.txt  distance.f90  fourier.f90  map_coef.f90  minkowski.f90  points.f90  routines.f90  write_in_file.f90
nr/: CMakeLists.txt  four1.f90  fourrow.f90  gasdev.f90  nr_module.f90  nrtype.f90  nrutil.f90  ran1.f90  ran_state.f90
